--- a/index.html
+++ b/index.html
@@ -64,6 +64,17 @@
       cursor: pointer;
     }
 
+    .partenaires {
+    display: flex;
+    justify-content: center;
+    }
+    
+    .partenaire1 {
+     align-items: center;
+     width: 70%;
+     height: auto; 
+    }
+
     ul {
       text-align: left;
       margin: 20px auto;
@@ -88,6 +99,14 @@
       <li>En cas de doute → parles-en à un adulte de confiance</li>
     </ul>
     <button onclick="location.reload()">Rejouer la simulation</button>
+    <div class="partenaires">
+     <img src="assets/cash_avenir.svg">
+     <img src="assets/espace_anne_frank.svg">
+    </div>
+    <div class="partenaire1">
+    <img src="assets/logo-jcef-allonge.svg">
+    </div>
+    
   </div>
 
   <script>
