--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
       margin: 20px auto;
       max-width: 300px;
     }
+    .titulo{ width: 80%; }
   </style>
+  
 </head>
 <body>
   <div id="hacking">
@@ -78,7 +80,7 @@
   </div>
 
   <div id="educatif">
-    <h1 style="color:red;">‼ Simulation pédagogique ‼</h1>
+    <h1 class="titulo", style="color:red;">‼ Simulation pédagogique ‼</h1>
     <p><b>Pas de panique</b> : aucune donnée n’a été volée.<br>
     Cette page est une simulation pour te montrer ce qui <u>aurait pu arriver</u> si c’était un vrai piratage.</p>
     <h3>👉 Les 3 réflexes à retenir :</h3>
@@ -90,12 +92,12 @@
     <button onclick="location.reload()">Rejouer la simulation</button>
 
    <div >
-     <img src="assets/cash_avenir.svg" alt="logo association Cash Avenir">
-     <img src="assets/espace_anne_frank.svg" alt="logo association Espace Anne Frank">
+     <img src="assets/cashavenir_transparent.png" alt="logo association Cash Avenir">
+     <img src="assets/espace_anne_frank-removebg-preview.png" alt="logo association Espace Anne Frank">
      </div>
      <div >
-    <img src="assets/jcef_logo.svg" alt="logo association Jeune Chambre Economique">
-     </div>
+    <img src="assets/jci_gpso_logo-removebg-preview.png" alt="logo association Jeune Chambre Economique">
+    </div>
     
   </div>
 
