--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       margin: 20px auto;
       max-width: 300px;
     }
-    .titulo{ width: 80%; }
+    .titulo{ white-space: nowrape; }
   </style>
   
 </head>
@@ -91,11 +91,9 @@
     </ul>
     <button onclick="location.reload()">Rejouer la simulation</button>
 
-   <div >
+    <div>
      <img src="assets/cashavenir_transparent.png" alt="logo association Cash Avenir">
      <img src="assets/espace_anne_frank-removebg-preview.png" alt="logo association Espace Anne Frank">
-     </div>
-     <div >
     <img src="assets/jci_gpso_logo-removebg-preview.png" alt="logo association Jeune Chambre Economique">
     </div>
     
