--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
       margin: 20px auto;
       max-width: 300px;
     }
-    .titulo{ white-space: nowrape; }
+    .titulo{ 
+      width:95%;
+      white-space: nowrape;
+      overflow: hidden;
+    }
   </style>
   
 </head>
@@ -91,11 +95,11 @@
     </ul>
     <button onclick="location.reload()">Rejouer la simulation</button>
 
-    <div>
+    <img src="assets/jci_gpso_logo-removebg-preview.png" alt="logo association Jeune Chambre Economique">
      <img src="assets/cashavenir_transparent.png" alt="logo association Cash Avenir">
      <img src="assets/espace_anne_frank-removebg-preview.png" alt="logo association Espace Anne Frank">
-    <img src="assets/jci_gpso_logo-removebg-preview.png" alt="logo association Jeune Chambre Economique">
-    </div>
+   
+    
     
   </div>
 
