--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
       max-width: 300px;
     }
     .titulo{ 
-      width:95%;
+      font-size: 2em;
+      color: red;
+      text-align: center;
       white-space: nowrape;
       overflow: hidden;
     }
@@ -84,7 +86,7 @@
   </div>
 
   <div id="educatif">
-    <h1 class="titulo", style="color:red;">‼ Simulation pédagogique ‼</h1>
+    <h1 class="titulo">‼ Simulation pédagogique ‼</h1>
     <p><b>Pas de panique</b> : aucune donnée n’a été volée.<br>
     Cette page est une simulation pour te montrer ce qui <u>aurait pu arriver</u> si c’était un vrai piratage.</p>
     <h3>👉 Les 3 réflexes à retenir :</h3>
@@ -94,11 +96,12 @@
       <li>En cas de doute → parles-en à un adulte de confiance</li>
     </ul>
     <button onclick="location.reload()">Rejouer la simulation</button>
-
-    <img src="assets/jci_gpso_logo-removebg-preview.png" alt="logo association Jeune Chambre Economique">
+    <br>
+    <img src="assets/jci_sso_logo_transparent.png" alt="logo association Jeune Chambre Economique">
+    <div>
      <img src="assets/cashavenir_transparent.png" alt="logo association Cash Avenir">
      <img src="assets/espace_anne_frank-removebg-preview.png" alt="logo association Espace Anne Frank">
-   
+    </div>
     
     
   </div>
